--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   get: ^4.6.5
+  cloud_firestore: ^4.8.0
+  firebase_core: ^2.13.1
   
 
 dev_dependencies:
