--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   get: ^4.6.5
-  cloud_firestore: ^4.8.0
-  firebase_core: ^2.13.1
+  firebase_core: ^2.7.1
+  firebase_auth: ^4.2.10
+  cloud_firestore: ^4.4.4
+  firebase_storage: ^11.0.15
+ 
   
 
 dev_dependencies:
